--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body {
   background-size: cover;
   background-position: center bottom;
   background-repeat: no-repeat;
+  width: 90%;
+  margin: 0 auto;
+  min-width: 600px;
+  max-width: 2000px;
 }
 
 .container {
