--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body {
   margin: 0 auto;
   min-width: 400px;
   max-width: 2000px;
+  min-height: 500px;
+  max-height: 1000px;
 }
 
 .container {
