--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ body {
   max-height: 1000px;
 }
 
+@media (max-width: 700px) {
+  body {
+    zoom: 2;
+  }
+}
+
 .container {
   text-align: center;
   padding: 20px;
