--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@ body {
   background-size: cover;
   background-position: center bottom;
   background-repeat: no-repeat;
-  width: 90%;
+  /*width: 90%;
   margin: 0 auto;
   min-width: 400px;
   max-width: 2000px;
   min-height: 500px;
-  max-height: 1000px;
+  max-height: 1000px;*/
 }
 
 .container {
@@ -41,12 +41,6 @@ body {
   position: absolute;
   top: 10px;
   right: 10px;
-}
-
-@media (max-height: 500px) {
-  body {
-    min-height: 800px;
-  }
 }
 
 input {
